[gd_scene load_steps=8 format=2]

[ext_resource path="res://Fonts/Montserrat-ExtraBold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://TitleScreen.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=5]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 1 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 113.15
margin_top = 66.3008
margin_right = 1153.15
margin_bottom = 626.301
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="Menu"]
margin_right = 1040.0

[node name="Label" type="Label" parent="Menu"]
margin_top = 4.0
margin_right = 1040.0
margin_bottom = 83.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 8
text = "Evolution Runner Adventure"
align = 1

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 87.0
margin_right = 1040.0
margin_bottom = 524.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 1040.0
margin_bottom = 437.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 50
alignment = 1

[node name="Play" type="Button" parent="Menu/CenterRow/Buttons"]
margin_top = 78.0
margin_right = 1040.0
margin_bottom = 138.0
rect_min_size = Vector2( 360, 60 )
flat = true

[node name="Label" type="Label" parent="Menu/CenterRow/Buttons/Play"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sobre" type="Button" parent="Menu/CenterRow/Buttons"]
margin_top = 188.0
margin_right = 1040.0
margin_bottom = 248.0
rect_min_size = Vector2( 360, 60 )
flat = true

[node name="Label" type="Label" parent="Menu/CenterRow/Buttons/Sobre"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "Sobre"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Créditos" type="Button" parent="Menu/CenterRow/Buttons"]
margin_top = 298.0
margin_right = 1040.0
margin_bottom = 358.0
rect_min_size = Vector2( 360, 60 )
flat = true

[node name="Label" type="Label" parent="Menu/CenterRow/Buttons/Créditos"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "Créditos"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Menu"]
margin_top = 528.0
margin_right = 1040.0
margin_bottom = 560.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/HBoxContainer"]
margin_right = 977.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="Menu/HBoxContainer"]
margin_left = 981.0
margin_right = 1040.0
margin_bottom = 32.0
rect_min_size = Vector2( 59, 32 )
size_flags_vertical = 3
flat = true

[node name="Label" type="Label" parent="Menu/HBoxContainer/Button"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
text = "Quit"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Menu/CenterRow/Buttons/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/Sobre" to="." method="_on_Sobre_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/Créditos" to="." method="_on_Crditos_pressed"]
[connection signal="pressed" from="Menu/HBoxContainer/Button" to="." method="_on_Button_pressed"]
